styled the nav bar again adding some padding to the sides to fix the txt being off screen

--- a/main.css
+++ b/main.css
@@ -83,8 +83,13 @@
     font-size: 23px;
   }
 
+  #weatherNav, #wikiNav, #newsNav, #videoNav{
+    text-decoration: none;
+    color: inherit;
+  }
+
   li {
-    margin: 0px 5px;
+    margin: 0px 3px;
   }
 
 
@@ -376,6 +381,7 @@
       flex-direction: row;
       list-style: none;
       margin: 0;
+      margin-right: 5px;
       padding: 0;
       font-size: 11px;
     }
@@ -388,6 +394,7 @@
       flex-direction: row;
       list-style: none;
       margin: 0;
+      margin-left: 5px;
       padding: 0;
       font-weight: bold;
       font-size: 16px;
